--- a/index.html
+++ b/index.html
@@ -456,6 +456,7 @@
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
     <link rel="stylesheet" href="css/calendar.world-champion.css">
     <link rel="stylesheet" href="css/calendar.work-of-art.css">
+    <link rel="stylesheet" href="css/calendar.yellow-eyed-penguin.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-dreams.css">
     <link rel="stylesheet" href="css/calendar.your-wildest-guess.css">
     <link rel="stylesheet" href="css/calendar.zodiac-constellations.css">
@@ -1131,6 +1132,7 @@
                 <option value="wonderful-experience">Wonderful Experience</option>
                 <option value="world-champion">World Champion</option>
                 <option value="work-of-art">Work of Art</option>
+                <option value="yellow-eyed-penguin">Yellow-eyed Penguin</option>
                 <option value="your-wildest-dreams">Your Wildest Dreams</option>
                 <option value="your-wildest-guess">Your Wildest Guess</option>
                 <option value="zodiac-constellations">Zodiac Constellations</option>
