--- a/index.html
+++ b/index.html
@@ -374,6 +374,7 @@
     <link rel="stylesheet" href="css/calendar.shift-in-perception.css">
     <link rel="stylesheet" href="css/calendar.significant-improvement.css">
     <link rel="stylesheet" href="css/calendar.silicon-valley.css">
+    <link rel="stylesheet" href="css/calendar.silver-dragon.css">
     <link rel="stylesheet" href="css/calendar.sky-eagle.css">
     <link rel="stylesheet" href="css/calendar.sky-hawk.css">
     <link rel="stylesheet" href="css/calendar.skylight-window.css">
@@ -1049,6 +1050,7 @@
                 <option value="shift-in-perception">Shift in Perception</option>
                 <option value="significant-improvement">Significant Improvement</option>
                 <option value="silicon-valley">Silicon Valley</option>
+                <option value="silver-dragon">Silver Dragon</option>
                 <option value="sky-eagle">Sky Eagle</option>
                 <option value="sky-hawk">Sky Hawk</option>
                 <option value="skylight-window">Skylight Window</option>
