--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
     <link rel="stylesheet" href="css/calendar.mountain-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
+    <link rel="stylesheet" href="css/calendar.mount-cook.css">
     <link rel="stylesheet" href="css/calendar.my-dream-country.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
@@ -972,6 +973,7 @@
                 <option value="mountain-of-dreams">Mountain of Dreams</option>
                 <option value="mountain-peak">Mountain Peak</option>
                 <option value="mount-fuji">Mount Fuji</option>
+                <option value="mount-cook">Mount Cook</option>
                 <option value="my-dream-country">My Dream Country</option>
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
