--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
+    <link rel="stylesheet" href="css/calendar.mountain-landscape.css">
     <link rel="stylesheet" href="css/calendar.mountain-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
@@ -970,6 +971,7 @@
                 <option value="moonlit-path">Moonlit Path</option>
                 <option value="morning-forest">Morning Forest</option>
                 <option value="mountain-lake">Mountain Lake</option>
+                <option value="mountain-landscape">Mountain Landscape</option>
                 <option value="mountain-of-dreams">Mountain of Dreams</option>
                 <option value="mountain-peak">Mountain Peak</option>
                 <option value="mount-fuji">Mount Fuji</option>
