--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="css/calendar.a-forward-move.css">
     <link rel="stylesheet" href="css/calendar.a-good-chapter.css">
     <link rel="stylesheet" href="css/calendar.a-good-idea.css">
+    <link rel="stylesheet" href="css/calendar.a-king-of-stone.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.alone-in-paradise.css">
     <link rel="stylesheet" href="css/calendar.a-lovely-day.css">
@@ -709,6 +710,7 @@
                 <option value="a-forward-move">A Forward Move</option>
                 <option value="a-good-chapter">A Good Chapter</option>
                 <option value="a-good-idea">A Good Idea</option>
+                <option value="a-king-of-stone">A King of Stone</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alone-in-paradise">Alone in Paradise</option>
                 <option value="a-lovely-day">A Lovely Day</option>
