--- a/index.html
+++ b/index.html
@@ -398,6 +398,7 @@
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
     <link rel="stylesheet" href="css/calendar.strategic-planning.css">
     <link rel="stylesheet" href="css/calendar.strawberry-moon.css">
+    <link rel="stylesheet" href="css/calendar.street-art-installation.css">
     <link rel="stylesheet" href="css/calendar.strength-of-spirit.css">
     <link rel="stylesheet" href="css/calendar.strong-foundation.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
@@ -1078,6 +1079,7 @@
                 <option value="strategic-advantage">Strategic Advantage</option>
                 <option value="strategic-planning">Strategic Planning</option>
                 <option value="strawberry-moon">Strawberry Moon</option>
+                <option value="street-art-installation">Street Art Installation</option>
                 <option value="strength-of-spirit">Strength of Spirit</option>
                 <option value="strong-foundation">Strong Foundation</option>
                 <option value="success-key">Success Key</option>
