--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@
     <link rel="stylesheet" href="css/calendar.technological-might.css">
     <link rel="stylesheet" href="css/calendar.tactical-advantage.css">
     <link rel="stylesheet" href="css/calendar.tactical-command.css">
+    <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
@@ -1092,6 +1093,7 @@
                 <option value="technological-might">Technological Might</option>
                 <option value="tactical-advantage">Tactical Advantage</option>
                 <option value="tactical-command">Tactical Command</option>
+                <option value="the-art-of-visible">The Art of Visible</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
                 <option value="the-dead-sea">The Dead Sea</option>
