--- a/index.html
+++ b/index.html
@@ -330,6 +330,7 @@
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
+    <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.perfect-world.css">
     <link rel="stylesheet" href="css/calendar.pink-flamingo.css">
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
@@ -1014,6 +1015,7 @@
                 <option value="overnight-train">Overnight Train</option>
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pacific-ocean">Pacific Ocean</option>
+                <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="perfect-world">Perfect World</option>
                 <option value="pink-flamingo">Pink Flamingo</option>
                 <option value="pink-lady">Pink Lady</option>
