--- a/index.html
+++ b/index.html
@@ -388,6 +388,7 @@
     <link rel="stylesheet" href="css/calendar.skylight-window.css">
     <link rel="stylesheet" href="css/calendar.small-happiness.css">
     <link rel="stylesheet" href="css/calendar.small-success.css">
+    <link rel="stylesheet" href="css/calendar.smiley-world.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
     <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
@@ -1074,6 +1075,7 @@
                 <option value="skylight-window">Skylight Window</option>
                 <option value="small-happiness">Small Happiness</option>
                 <option value="small-success">Small Success</option>
+                <option value="smiley-world">Smiley World</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
                 <option value="spark-of-knowledge">Spark of Knowledge</option>
