--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
     <link rel="stylesheet" href="css/calendar.group-11.css">
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
+    <link rel="stylesheet" href="css/calendar.hidden-gems.css">
     <link rel="stylesheet" href="css/calendar.hidden-paradise.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
     <link rel="stylesheet" href="css/calendar.high-intelligence.css">
@@ -913,6 +914,7 @@
                 <option value="group-11">Group 11</option>
                 <option value="guangzhou-lights">Guangzhou Lights</option>
                 <option value="heavy-rain">Heavy Rain</option>
+                <option value="hidden-gems">Hidden Gems</option>
                 <option value="hidden-paradise">Hidden Paradise</option>
                 <option value="hidden-trail">Hidden Trail</option>
                 <option value="high-intelligence">High Intelligence</option>
