--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
     <link rel="stylesheet" href="css/calendar.palma-de-mallorca.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
+    <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
     <link rel="stylesheet" href="css/calendar.perfect-world.css">
     <link rel="stylesheet" href="css/calendar.pink-flamingo.css">
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
@@ -1023,6 +1024,7 @@
                 <option value="pacific-ocean">Pacific Ocean</option>
                 <option value="palma-de-mallorca">Palma de Mallorca</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
+                <option value="patagonian-sky">Patagonian Sky</option>
                 <option value="perfect-world">Perfect World</option>
                 <option value="pink-flamingo">Pink Flamingo</option>
                 <option value="pink-lady">Pink Lady</option>
