--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
     <link rel="stylesheet" href="css/calendar.logical-intelligence.css">
     <link rel="stylesheet" href="css/calendar.love-and-passion.css">
+    <link rel="stylesheet" href="css/calendar.love-of-yesterday.css">
     <link rel="stylesheet" href="css/calendar.love-station.css">
     <link rel="stylesheet" href="css/calendar.lucid-dream.css">
     <link rel="stylesheet" href="css/calendar.lunar-eclipse.css">
@@ -411,6 +412,7 @@
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
+    <link rel="stylesheet" href="css/calendar.summer-breeze.css">
     <link rel="stylesheet" href="css/calendar.sunset-magic.css">
     <link rel="stylesheet" href="css/calendar.sweet-misty-morning.css">
     <link rel="stylesheet" href="css/calendar.sword-of-fate.css">
@@ -960,6 +962,7 @@
                 <option value="lions-mane">Lion's Mane</option>
                 <option value="logical-intelligence">Logical Intelligence</option>
                 <option value="love-and-passion">𝐋𝐨𝐯𝐞 & 𝐏𝐚𝐬𝐬𝐢𝐨𝐧</option>
+                <option value="love-of-yesterday">𝐋𝐨𝐯𝐞 of Yesterday</option>
                 <option value="love-station">Love Station</option>
                 <option value="lucid-dream">Lucid Dream</option>
                 <option value="lunar-eclipse">Lunar Eclipse</option>
@@ -1100,6 +1103,7 @@
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
+                <option value="summer-breeze">Summer Breeze</option>
                 <option value="sunset-magic">Sunset Magic</option>
                 <option value="sweet-misty-morning">Sweet Misty Morning</option>
                 <option value="sword-of-fate">Sword of Fate</option>
