--- a/index.html
+++ b/index.html
@@ -302,6 +302,7 @@
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.mount-cook.css">
     <link rel="stylesheet" href="css/calendar.my-dream-country.css">
+    <link rel="stylesheet" href="css/calendar.my-tomorrow.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
@@ -995,6 +996,7 @@
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="mount-cook">Mount Cook</option>
                 <option value="my-dream-country">My Dream Country</option>
+                <option value="my-tomorrow">My Tomorrow</option>
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
                 <option value="new-millenium">New Millenium</option>
