--- a/index.html
+++ b/index.html
@@ -468,6 +468,7 @@
     <link rel="stylesheet" href="css/calendar.white-sun-of-the-desert.css">
     <link rel="stylesheet" href="css/calendar.wild-flower.css">
     <link rel="stylesheet" href="css/calendar.wild-rose.css">
+    <link rel="stylesheet" href="css/calendar.wild-tropics.css">
     <link rel="stylesheet" href="css/calendar.wild-wonders.css">
     <link rel="stylesheet" href="css/calendar.winter-wonderland.css">
     <link rel="stylesheet" href="css/calendar.wonderful-experience.css">
@@ -1161,6 +1162,7 @@
                 <option value="white-sun-of-the-desert">White Sun of the Desert</option>
                 <option value="wild-flower">Wild Flower</option>
                 <option value="wild-rose">Wild Rose</option>
+                <option value="wild-tropics">Wild Tropics</option>
                 <option value="wild-wonders">Wild Wonders</option>
                 <option value="winter-wonderland">Winter Wonderland</option>
                 <option value="wonderful-experience">Wonderful Experience</option>
