--- a/index.html
+++ b/index.html
@@ -210,6 +210,7 @@
     <link rel="stylesheet" href="css/calendar.golden-lights.css">
     <link rel="stylesheet" href="css/calendar.golden-opportunity.css">
     <link rel="stylesheet" href="css/calendar.golden-summer.css">
+    <link rel="stylesheet" href="css/calendar.gold-mine.css">
     <link rel="stylesheet" href="css/calendar.gradual-improvement.css">
     <link rel="stylesheet" href="css/calendar.grand-prix.css">
     <link rel="stylesheet" href="css/calendar.great-idea.css">
@@ -897,14 +898,15 @@
                 <option value="giant-petrel">Giant Petrel</option>
                 <option value="global-impact">Global Impact</option>
                 <option value="glorious-day">Glorious Day</option>
-                <option value="golden-coast">Gold Coast</option>
                 <option value="golden-century">Golden Century</option>
+                <option value="golden-coast">Golden Coast</option>
                 <option value="golden-eagle">Golden Eagle</option>
                 <option value="golden-gate">Golden Gate</option>
                 <option value="golden-horizon">Golden Horizon</option>
                 <option value="golden-lights">Golden Lights</option>
                 <option value="golden-opportunity">Golden Opportunity</option>
                 <option value="golden-summer">Golden Summer</option>
+                <option value="gold-mine">Gold Mine</option>
                 <option value="gradual-improvement">Gradual Improvement</option>
                 <option value="grand-prix">Grand Prix</option>
                 <option value="great-idea">Great Idea</option>
