--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.dramatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
+    <link rel="stylesheet" href="css/calendar.eagle-creek.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.early-dreams.css">
     <link rel="stylesheet" href="css/calendar.emerald-stream.css">
@@ -862,6 +863,7 @@
                 <option value="dragonfly">Dragonfly</option>
                 <option value="dramatic-coastline">Dramatic Coastline</option>
                 <option value="dream-adventure">Dream Adventure</option>
+                <option value="eagle-creek">Eagle Creek</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="early-dreams">Early Dreams</option>
                 <option value="emerald-stream">Emerald Stream</option>
