--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <link rel="stylesheet" href="css/calendar.a-new-opportunity.css">
     <link rel="stylesheet" href="css/calendar.antarctic-ice.css">
     <link rel="stylesheet" href="css/calendar.antarctic-snowdrifts.css">
+    <link rel="stylesheet" href="css/calendar.a-quiet-creek.css">
     <link rel="stylesheet" href="css/calendar.arctic-glow.css">
     <link rel="stylesheet" href="css/calendar.arctic-snowfall.css">
     <link rel="stylesheet" href="css/calendar.art-studio.css">
@@ -741,6 +742,7 @@
                 <option value="a-new-opportunity">A New Opportunity</option>
                 <option value="antarctic-ice">Antarctic Ice</option>
                 <option value="antarctic-snowdrifts">Antarctic Snowdrifts</option>
+                <option value="a-quiet-creek">A Quiet Creek</option>
                 <option value="arctic-glow">Arctic Glow</option>
                 <option value="arctic-snowfall">Arctic Snowfall</option>
                 <option value="art-studio">Art Studio</option>
