--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <link rel="stylesheet" href="css/calendar.alpine-landscape.css">
     <link rel="stylesheet" href="css/calendar.amazing-opportunity.css">
     <link rel="stylesheet" href="css/calendar.amazon-dolphin.css">
+    <link rel="stylesheet" href="css/calendar.amazon-rainforest.css">
     <link rel="stylesheet" href="css/calendar.amazon-river.css">
     <link rel="stylesheet" href="css/calendar.american-dream.css">
     <link rel="stylesheet" href="css/calendar.andromeda-galaxy.css">
@@ -734,8 +735,9 @@
                 <option value="a-lovely-day">A Lovely Day</option>
                 <option value="alpha-centauri">Alpha Centauri</option>
                 <option value="alpine-landscape">Alpine Landscape</option>
-                <option value="amazon-dolphin">Amazon Dolphin</option>
                 <option value="amazing-opportunity">Amazing Opportunity</option>
+                <option value="amazon-dolphin">Amazon Dolphin</option>
+                <option value="amazon-rainforest">Amazon Rainforest</option>
                 <option value="amazon-river">Amazon River</option>
                 <option value="american-dream">American Dream</option>
                 <option value="andromeda-galaxy">Andromeda Galaxy</option>
