--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
     <link rel="stylesheet" href="css/calendar.flamingo-sky.css">
     <link rel="stylesheet" href="css/calendar.forgotten-dreams.css">
     <link rel="stylesheet" href="css/calendar.formula-one.css">
+    <link rel="stylesheet" href="css/calendar.forward-thinking.css">
     <link rel="stylesheet" href="css/calendar.free-flight.css">
     <link rel="stylesheet" href="css/calendar.fresh-start.css">
     <link rel="stylesheet" href="css/calendar.frontier-unknown.css">
@@ -892,6 +893,7 @@
                 <option value="flamingo-sky">Flamingo Sky</option>
                 <option value="forgotten-dreams">Forgotten Dreams</option>
                 <option value="formula-one">Formula One</option>
+                <option value="forward-thinking">Foward Thinking</option>
                 <option value="free-flight">Free Flight</option>
                 <option value="fresh-start">Fresh Start</option>
                 <option value="frontier-unknown">Frontier Unknown</option>
