--- a/index.html
+++ b/index.html
@@ -438,6 +438,7 @@
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
     <link rel="stylesheet" href="css/calendar.the-hidden-jem.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
+    <link rel="stylesheet" href="css/calendar.the-highest-peak.css">
     <link rel="stylesheet" href="css/calendar.the-last-day-of-spring.css">
     <link rel="stylesheet" href="css/calendar.the-last-mohican.css">
     <link rel="stylesheet" href="css/calendar.the-last-paradise.css">
@@ -1137,6 +1138,7 @@
                 <option value="the-great-wall">The Great Wall</option>
                 <option value="the-hidden-jem">The Hidden Jem</option>
                 <option value="the-highest-level">The Highest Level</option>
+                <option value="the-highest-peak">The Highest Peak</option>
                 <option value="the-last-day-of-spring">The Last Day of Spring</option>
                 <option value="the-last-mohican">The Last Mohican</option>
                 <option value="the-last-paradise">The Last Paradise</option>
