--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
     <link rel="stylesheet" href="css/calendar.mountain-landscape.css">
     <link rel="stylesheet" href="css/calendar.mountain-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
+    <link rel="stylesheet" href="css/calendar.mountain-view.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.mount-cook.css">
     <link rel="stylesheet" href="css/calendar.my-dream-country.css">
@@ -1006,6 +1007,7 @@
                 <option value="mountain-landscape">Mountain Landscape</option>
                 <option value="mountain-of-dreams">Mountain of Dreams</option>
                 <option value="mountain-peak">Mountain Peak</option>
+                <option value="mountain-view">Mountain View</option>
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="mount-cook">Mount Cook</option>
                 <option value="my-dream-country">My Dream Country</option>
