--- a/index.html
+++ b/index.html
@@ -269,6 +269,7 @@
     <link rel="stylesheet" href="css/calendar.lemon-lime.css">
     <link rel="stylesheet" href="css/calendar.level-of-comfort.css">
     <link rel="stylesheet" href="css/calendar.life-quality.css">
+    <link rel="stylesheet" href="css/calendar.light-and-shadows.css">
     <link rel="stylesheet" href="css/calendar.like-a-bird.css">
     <link rel="stylesheet" href="css/calendar.limited-edition.css">
     <link rel="stylesheet" href="css/calendar.lions-mane.css">
@@ -972,6 +973,7 @@
                 <option value="lemon-lime">Lemon Lime</option>
                 <option value="level-of-comfort">Level of Comfort</option>
                 <option value="life-quality">Life Quality</option>
+                <option value="light-and-shadows">Light & Shadows</option>
                 <option value="like-a-bird">Like a Bird</option>
                 <option value="limited-edition">Limited Edition</option>
                 <option value="lions-mane">Lion's Mane</option>
