--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.dramatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
+    <link rel="stylesheet" href="css/calendar.dream-islands.css">
     <link rel="stylesheet" href="css/calendar.eagle-creek.css">
     <link rel="stylesheet" href="css/calendar.eagle-swoop.css">
     <link rel="stylesheet" href="css/calendar.early-dreams.css">
@@ -872,6 +873,7 @@
                 <option value="dragonfly">Dragonfly</option>
                 <option value="dramatic-coastline">Dramatic Coastline</option>
                 <option value="dream-adventure">Dream Adventure</option>
+                <option value="dream-islands">Dream Islands</option>
                 <option value="eagle-creek">Eagle Creek</option>
                 <option value="eagle-swoop">Eagle Swoop</option>
                 <option value="early-dreams">Early Dreams</option>
