--- a/index.html
+++ b/index.html
@@ -433,6 +433,7 @@
     <link rel="stylesheet" href="css/calendar.the-art-of-visible.css">
     <link rel="stylesheet" href="css/calendar.the-best-of-fashion.css">
     <link rel="stylesheet" href="css/calendar.the-black-spruce.css">
+    <link rel="stylesheet" href="css/calendar.the-burning-heart-of-the-sahara.css">
     <link rel="stylesheet" href="css/calendar.the-dead-sea.css">
     <link rel="stylesheet" href="css/calendar.the-desert-line.css">
     <link rel="stylesheet" href="css/calendar.the-element-of-surprise.css">
@@ -1136,6 +1137,7 @@
                 <option value="the-art-of-visible">The Art of Visible</option>
                 <option value="the-best-of-fashion">The Best of Fashion</option>
                 <option value="the-black-spruce">The Black Spruce</option>
+                <option value="the-burning-heart-of-the-sahara">The Burning Heart of the Sahara</option>
                 <option value="the-dead-sea">The Dead Sea</option>
                 <option value="the-desert-line">The Desert Line</option>
                 <option value="the-element-of-surprise">The Element of Surprise</option>
