--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
     <link rel="stylesheet" href="css/calendar.greyscale.css">
     <link rel="stylesheet" href="css/calendar.group-11.css">
     <link rel="stylesheet" href="css/calendar.guangzhou-lights.css">
+    <link rel="stylesheet" href="css/calendar.haute-couture.css">
     <link rel="stylesheet" href="css/calendar.heavy-rain.css">
     <link rel="stylesheet" href="css/calendar.hidden-gems.css">
     <link rel="stylesheet" href="css/calendar.hidden-paradise.css">
@@ -935,6 +936,7 @@
                 <option value="greyscale">Greyscale</option>
                 <option value="group-11">Group 11</option>
                 <option value="guangzhou-lights">Guangzhou Lights</option>
+                <option value="haute-couture">Haute Couture</option>
                 <option value="heavy-rain">Heavy Rain</option>
                 <option value="hidden-gems">Hidden Gems</option>
                 <option value="hidden-paradise">Hidden Paradise</option>
