--- a/index.html
+++ b/index.html
@@ -360,6 +360,7 @@
     <link rel="stylesheet" href="css/calendar.practical-experience.css">
     <link rel="stylesheet" href="css/calendar.practice-makes-perfect.css">
     <link rel="stylesheet" href="css/calendar.precious-question.css">
+    <link rel="stylesheet" href="css/calendar.pristine-lake.css">
     <link rel="stylesheet" href="css/calendar.progressive-decision.css">
     <link rel="stylesheet" href="css/calendar.pure-light.css">
     <link rel="stylesheet" href="css/calendar.purple-fog.css">
@@ -1066,6 +1067,7 @@
                 <option value="practical-experience">Practical Experience</option>
                 <option value="practice-makes-perfect">Practice Makes Perfect</option>
                 <option value="precious-question">Precious Question</option>
+                <option value="pristine-lake">Pristine Lake</option>
                 <option value="progressive-decision">Progressive Decision</option>
                 <option value="pure-light">Pure Light</option>
                 <option value="purple-fog">Purple Fog</option>
