--- a/index.html
+++ b/index.html
@@ -442,6 +442,7 @@
     <link rel="stylesheet" href="css/calendar.the-final-step.css">
     <link rel="stylesheet" href="css/calendar.the-great-silk-road.css">
     <link rel="stylesheet" href="css/calendar.the-great-wall.css">
+    <link rel="stylesheet" href="css/calendar.the-green-mist.css">
     <link rel="stylesheet" href="css/calendar.the-hidden-jem.css">
     <link rel="stylesheet" href="css/calendar.the-highest-level.css">
     <link rel="stylesheet" href="css/calendar.the-highest-peak.css">
@@ -1148,6 +1149,7 @@
                 <option value="the-final-step">The Final Step</option>
                 <option value="the-great-silk-road">The Great Silk Road</option>
                 <option value="the-great-wall">The Great Wall</option>
+                <option value="the-green-mist">The Green Mist</option>
                 <option value="the-hidden-jem">The Hidden Jem</option>
                 <option value="the-highest-level">The Highest Level</option>
                 <option value="the-highest-peak">The Highest Peak</option>
