--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
     <link rel="stylesheet" href="css/calendar.hidden-gems.css">
     <link rel="stylesheet" href="css/calendar.hidden-paradise.css">
     <link rel="stylesheet" href="css/calendar.hidden-trail.css">
+    <link rel="stylesheet" href="css/calendar.high-energy.css">
     <link rel="stylesheet" href="css/calendar.high-intelligence.css">
     <link rel="stylesheet" href="css/calendar.high-performance.css">
     <link rel="stylesheet" href="css/calendar.high-speed-rail.css">
@@ -943,6 +944,7 @@
                 <option value="hidden-gems">Hidden Gems</option>
                 <option value="hidden-paradise">Hidden Paradise</option>
                 <option value="hidden-trail">Hidden Trail</option>
+                <option value="high-energy">High Energy</option>
                 <option value="high-intelligence">High Intelligence</option>
                 <option value="high-performance">High Performance</option>
                 <option value="high-speed-rail">High-Speed Rail</option>
