--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-power.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
+    <link rel="stylesheet" href="css/calendar.dragon-well.css">
     <link rel="stylesheet" href="css/calendar.dramatic-coastline.css">
     <link rel="stylesheet" href="css/calendar.dream-adventure.css">
     <link rel="stylesheet" href="css/calendar.dream-islands.css">
@@ -876,6 +877,7 @@
                 <option value="doterra-power">DōTERRA Power</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
+                <option value="dragon-well">Dragon Well</option>
                 <option value="dramatic-coastline">Dramatic Coastline</option>
                 <option value="dream-adventure">Dream Adventure</option>
                 <option value="dream-islands">Dream Islands</option>
