--- a/index.html
+++ b/index.html
@@ -416,6 +416,7 @@
     <link rel="stylesheet" href="css/calendar.stay-cool.css">
     <link rel="stylesheet" href="css/calendar.stay-positive.css">
     <link rel="stylesheet" href="css/calendar.steel-shadows.css">
+    <link rel="stylesheet" href="css/calendar.still-a-highlight.css">
     <link rel="stylesheet" href="css/calendar.stockholm-roofs.css">
     <link rel="stylesheet" href="css/calendar.straight-to-the-point.css">
     <link rel="stylesheet" href="css/calendar.strategic-advantage.css">
@@ -1126,6 +1127,7 @@
                 <option value="stay-cool">Stay Cool</option>
                 <option value="stay-positive">Stay Positive</option>
                 <option value="steel-shadows">Steel Shadows</option>
+                <option value="still-a-highlight">Still a Highlight</option>
                 <option value="stockholm-roofs">Stockholm Roofs</option>
                 <option value="straight-to-the-point">Straight to the Point</option>
                 <option value="strategic-advantage">Strategic Advantage</option>
