--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
     <link rel="stylesheet" href="css/calendar.centaurus-constellation.css">
     <link rel="stylesheet" href="css/calendar.cherry-garden.css">
     <link rel="stylesheet" href="css/calendar.cinnamon-street.css">
+    <link rel="stylesheet" href="css/calendar.citrus-blaze.css">
     <link rel="stylesheet" href="css/calendar.city-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.city-of-night.css">
     <link rel="stylesheet" href="css/calendar.clean-code.css">
@@ -341,6 +342,7 @@
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.on-the-wild-side.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
+    <link rel="stylesheet" href="css/calendar.orange-dragon.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-blue.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
@@ -828,6 +830,7 @@
                 <option value="centaurus-constellation">Centaurus Constellation</option>
                 <option value="cherry-garden">Cherry Garden</option>
                 <option value="cinnamon-street">Cinnamon Street</option>
+                <option value="citrus-blaze">Citrus Blaze</option>
                 <option value="city-of-dreams">City of Dreams</option>
                 <option value="city-of-night">City of Night</option>
                 <option value="clean-code">Clean Code</option>
@@ -1054,6 +1057,7 @@
                 <option value="on-the-island">On the Island</option>
                 <option value="on-the-wild-side">On the Wild Side</option>
                 <option value="orange-country">Orange Country</option>
+                <option value="orange-dragon">Orange Dragon</option>
                 <option value="orion-constellation">Orion Constellation</option>
                 <option value="out-of-the-blue">Out of the Blue</option>
                 <option value="out-of-the-box">Out of the Box</option>
