--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
     <link rel="stylesheet" href="css/calendar.doterra-magic.css">
     <link rel="stylesheet" href="css/calendar.doterra-new.css">
     <link rel="stylesheet" href="css/calendar.doterra-power.css">
+    <link rel="stylesheet" href="css/calendar.dragonfire.css">
     <link rel="stylesheet" href="css/calendar.dragon-flame.css">
     <link rel="stylesheet" href="css/calendar.dragonfly.css">
     <link rel="stylesheet" href="css/calendar.dragon-well.css">
@@ -342,7 +343,6 @@
     <link rel="stylesheet" href="css/calendar.on-the-island.css">
     <link rel="stylesheet" href="css/calendar.on-the-wild-side.css">
     <link rel="stylesheet" href="css/calendar.orange-country.css">
-    <link rel="stylesheet" href="css/calendar.orange-dragon.css">
     <link rel="stylesheet" href="css/calendar.orion-constellation.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-blue.css">
     <link rel="stylesheet" href="css/calendar.out-of-the-box.css">
@@ -882,6 +882,7 @@
                 <option value="doterra-magic">DōTERRA Magic</option>
                 <option value="doterra-new">DōTERRA New</option>
                 <option value="doterra-power">DōTERRA Power</option>
+                <option value="dragonfire">Dragonfire</option>
                 <option value="dragon-flame">Dragon Flame</option>
                 <option value="dragonfly">Dragonfly</option>
                 <option value="dragon-well">Dragon Well</option>
@@ -1057,7 +1058,6 @@
                 <option value="on-the-island">On the Island</option>
                 <option value="on-the-wild-side">On the Wild Side</option>
                 <option value="orange-country">Orange Country</option>
-                <option value="orange-dragon">Orange Dragon</option>
                 <option value="orion-constellation">Orion Constellation</option>
                 <option value="out-of-the-blue">Out of the Blue</option>
                 <option value="out-of-the-box">Out of the Box</option>
