--- a/index.html
+++ b/index.html
@@ -409,6 +409,7 @@
     <link rel="stylesheet" href="css/calendar.small-happiness.css">
     <link rel="stylesheet" href="css/calendar.small-success.css">
     <link rel="stylesheet" href="css/calendar.smiley-world.css">
+    <link rel="stylesheet" href="css/calendar.snake-river.css">
     <link rel="stylesheet" href="css/calendar.solar-flare.css">
     <link rel="stylesheet" href="css/calendar.something-special.css">
     <link rel="stylesheet" href="css/calendar.spark-of-knowledge.css">
@@ -1123,6 +1124,7 @@
                 <option value="small-happiness">Small Happiness</option>
                 <option value="small-success">Small Success</option>
                 <option value="smiley-world">Smiley World</option>
+                <option value="snake-river">Snake River</option>
                 <option value="solar-flare">Solar Flare</option>
                 <option value="something-special">Something Special</option>
                 <option value="spark-of-knowledge">Spark of Knowledge</option>
