--- a/index.html
+++ b/index.html
@@ -349,6 +349,7 @@
     <link rel="stylesheet" href="css/calendar.overnight-train.css">
     <link rel="stylesheet" href="css/calendar.over-the-seven-seas.css">
     <link rel="stylesheet" href="css/calendar.pacific-ocean.css">
+    <link rel="stylesheet" href="css/calendar.palm-beach.css">
     <link rel="stylesheet" href="css/calendar.palma-de-mallorca.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
@@ -1065,6 +1066,7 @@
                 <option value="overnight-train">Overnight Train</option>
                 <option value="over-the-seven-seas">Over the Seven Seas</option>
                 <option value="pacific-ocean">Pacific Ocean</option>
+                <option value="palm-beach">Palm Beach</option>
                 <option value="palma-de-mallorca">Palma de Mallorca</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="patagonian-sky">Patagonian Sky</option>
