--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
     <link rel="stylesheet" href="css/calendar.hometown-vibes.css">
     <link rel="stylesheet" href="css/calendar.hurricane-clouds.css">
     <link rel="stylesheet" href="css/calendar.hyperloop.css">
+    <link rel="stylesheet" href="css/calendar.iceberg-lake.css">
     <link rel="stylesheet" href="css/calendar.ice-giant.css">
     <link rel="stylesheet" href="css/calendar.ice-palace.css">
     <link rel="stylesheet" href="css/calendar.iceland-volcanoes.css">
@@ -965,6 +966,7 @@
                 <option value="hometown-vibes">Hometown Vibes</option>
                 <option value="hurricane-clouds">Hurricane Clouds</option>
                 <option value="hyperloop">Hyperloop</option>
+                <option value="iceberg-lake">Iceberg Lake</option>
                 <option value="ice-giant">Ice Giant</option>
                 <option value="ice-palace">Ice Palace</option>
                 <option value="iceland-volcanoes">Iceland’s Volcanoes</option>
