--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
     <link rel="stylesheet" href="css/calendar.digital-progress.css">
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
+    <link rel="stylesheet" href="css/calendar.domino-dancing.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
     <link rel="stylesheet" href="css/calendar.doterra-colors.css">
     <link rel="stylesheet" href="css/calendar.doterra-gold.css">
@@ -876,8 +877,9 @@
                 <option value="different-perspective">Different Perspective</option>
                 <option value="digital-excellence">Digital Excellence</option>
                 <option value="digital-progress">Digital Progress</option>
-                <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="distant-skies">Distant Skies</option>
+                <option value="divi-divi-trees">Divi-divi Trees</option>
+                <option value="domino-dancing">Domino Dancing</option>
                 <option value="doterra-black">DōTERRA Black</option>
                 <option value="doterra-colors">DōTERRA Colors</option>
                 <option value="doterra-gold">DōTERRA Gold</option>
