--- a/index.html
+++ b/index.html
@@ -355,6 +355,7 @@
     <link rel="stylesheet" href="css/calendar.palma-de-mallorca.css">
     <link rel="stylesheet" href="css/calendar.patagonian-shores.css">
     <link rel="stylesheet" href="css/calendar.patagonian-sky.css">
+    <link rel="stylesheet" href="css/calendar.perfect-afternoon.css">
     <link rel="stylesheet" href="css/calendar.perfect-world.css">
     <link rel="stylesheet" href="css/calendar.pink-flamingo.css">
     <link rel="stylesheet" href="css/calendar.pink-lady.css">
@@ -1074,6 +1075,7 @@
                 <option value="palma-de-mallorca">Palma de Mallorca</option>
                 <option value="patagonian-shores">Patagonian Shores</option>
                 <option value="patagonian-sky">Patagonian Sky</option>
+                <option value="perfect-afternoon">Perfect Afternoon</option>
                 <option value="perfect-world">Perfect World</option>
                 <option value="pink-flamingo">Pink Flamingo</option>
                 <option value="pink-lady">Pink Lady</option>
