--- a/index.html
+++ b/index.html
@@ -327,6 +327,7 @@
     <link rel="stylesheet" href="css/calendar.next-steps.css">
     <link rel="stylesheet" href="css/calendar.niagara-falls.css">
     <link rel="stylesheet" href="css/calendar.night-dragon.css">
+    <link rel="stylesheet" href="css/calendar.night-mode-design.css">
     <link rel="stylesheet" href="css/calendar.night-sky.css">
     <link rel="stylesheet" href="css/calendar.northern-nights.css">
     <link rel="stylesheet" href="css/calendar.north-pole.css">
@@ -1047,6 +1048,7 @@
                 <option value="new-style">New Style</option>
                 <option value="niagara-falls">Niagara Falls</option>
                 <option value="night-dragon">Night Dragon</option>
+                <option value="night-mode-design">Night Mode Design</option>
                 <option value="night-sky">Night Sky</option>
                 <option value="northern-nights">Northern Nights</option>
                 <option value="north-pole">North Pole</option>
