--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <link rel="stylesheet" href="css/calendar.a-good-chapter.css">
     <link rel="stylesheet" href="css/calendar.a-good-idea.css">
     <link rel="stylesheet" href="css/calendar.a-great-experience.css">
+    <link rel="stylesheet" href="css/calendar.air-power.css">
     <link rel="stylesheet" href="css/calendar.a-king-of-stone.css">
     <link rel="stylesheet" href="css/calendar.aloe-vera.css">
     <link rel="stylesheet" href="css/calendar.alone-in-paradise.css">
@@ -752,6 +753,7 @@
                 <option value="a-good-chapter">A Good Chapter</option>
                 <option value="a-good-idea">A Good Idea</option>
                 <option value="a-great-experience">A Great Experience</option>
+                <option value="air-power">Air Power</option>
                 <option value="a-king-of-stone">A King of Stone</option>
                 <option value="aloe-vera">Aloe Vera</option>
                 <option value="alone-in-paradise">Alone in Paradise</option>
