--- a/index.html
+++ b/index.html
@@ -313,6 +313,7 @@
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
     <link rel="stylesheet" href="css/calendar.mountain-landscape.css">
+    <link rel="stylesheet" href="css/calendar.mountain-mood.css">
     <link rel="stylesheet" href="css/calendar.mountain-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
     <link rel="stylesheet" href="css/calendar.mountain-view.css">
@@ -1036,6 +1037,7 @@
                 <option value="morning-forest">Morning Forest</option>
                 <option value="mountain-lake">Mountain Lake</option>
                 <option value="mountain-landscape">Mountain Landscape</option>
+                <option value="mountain-mood">Mountain Mood</option>
                 <option value="mountain-of-dreams">Mountain of Dreams</option>
                 <option value="mountain-peak">Mountain Peak</option>
                 <option value="mountain-view">Mountain View</option>
