--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
     <link rel="stylesheet" href="css/calendar.blue-mountains.css">
     <link rel="stylesheet" href="css/calendar.blue-ocean.css">
     <link rel="stylesheet" href="css/calendar.blue-planet.css">
+    <link rel="stylesheet" href="css/calendar.blue-sky.css">
     <link rel="stylesheet" href="css/calendar.blue-stars.css">
     <link rel="stylesheet" href="css/calendar.blue-whale.css">
     <link rel="stylesheet" href="css/calendar.blue-white.css">
@@ -816,6 +817,7 @@
                 <option value="blue-mountains">Blue Mountains</option>
                 <option value="blue-ocean">Blue Ocean</option>
                 <option value="blue-planet">Blue Planet</option>
+                <option value="blue-sky">Blue Sky</option>
                 <option value="blue-stars">Blue Stars</option>
                 <option value="blue-whale">Blue Whale</option>
                 <option value="blue-white">Blue & White</option>
