--- a/index.html
+++ b/index.html
@@ -437,6 +437,7 @@
     <link rel="stylesheet" href="css/calendar.street-art-installation.css">
     <link rel="stylesheet" href="css/calendar.strength-of-spirit.css">
     <link rel="stylesheet" href="css/calendar.strong-foundation.css">
+    <link rel="stylesheet" href="css/calendar.style-spectrum.css">
     <link rel="stylesheet" href="css/calendar.success-key.css">
     <link rel="stylesheet" href="css/calendar.success-motivation.css">
     <link rel="stylesheet" href="css/calendar.success-story.css">
@@ -1161,6 +1162,7 @@
                 <option value="street-art-installation">Street Art Installation</option>
                 <option value="strength-of-spirit">Strength of Spirit</option>
                 <option value="strong-foundation">Strong Foundation</option>
+                <option value="style-spectrum">Style Spectrum</option>
                 <option value="success-key">Success Key</option>
                 <option value="success-motivation">Success Motivation</option>
                 <option value="success-story">Success Story</option>
