--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
     <link rel="stylesheet" href="css/calendar.queen-of-ambience.css">
     <link rel="stylesheet" href="css/calendar.quiet-evening.css">
     <link rel="stylesheet" href="css/calendar.quiet-progress.css">
+    <link rel="stylesheet" href="css/calendar.race-ready.css">
     <link rel="stylesheet" href="css/calendar.rainbow-dream.css">
     <link rel="stylesheet" href="css/calendar.rainforest-jungle.css">
     <link rel="stylesheet" href="css/calendar.rain-waltz.css">
@@ -1108,6 +1109,7 @@
                 <option value="queen-of-ambience">Queen of Ambience</option>
                 <option value="quiet-evening">Quiet Evening</option>
                 <option value="quiet-progress">Quiet Progress</option>
+                <option value="race-ready">Race Ready</option>
                 <option value="rainbow-dream">Rainbow Dream</option>
                 <option value="rainforest-jungle">Rainforest Jungle</option>
                 <option value="rain-waltz">Rain Waltz</option>
