--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
     <link rel="stylesheet" href="css/calendar.ocean-view.css">
     <link rel="stylesheet" href="css/calendar.ocean-vortex.css">
     <link rel="stylesheet" href="css/calendar.okinawa-breeze.css">
+    <link rel="stylesheet" href="css/calendar.one-dream.css">
     <link rel="stylesheet" href="css/calendar.one-step-ahead.css">
     <link rel="stylesheet" href="css/calendar.one-step-at-a-time.css">
     <link rel="stylesheet" href="css/calendar.one-way-ticket.css">
@@ -1072,6 +1073,7 @@
                 <option value="ocean-view">Ocean View</option>
                 <option value="ocean-vortex">Ocean Vortex</option>
                 <option value="okinawa-breeze">Okinawa Breeze</option>
+                <option value="one-dream">One Dream</option>
                 <option value="one-step-ahead">One Step Ahead</option>
                 <option value="one-step-at-a-time">One Step at a Time</option>
                 <option value="one-way-ticket">One Way Ticket</option>
