--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <link rel="stylesheet" href="css/calendar.distant-skies.css">
     <link rel="stylesheet" href="css/calendar.divi-divi-trees.css">
     <link rel="stylesheet" href="css/calendar.domino-dancing.css">
+    <link rel="stylesheet" href="css/calendar.domino-effect.css">
     <link rel="stylesheet" href="css/calendar.doterra-black.css">
     <link rel="stylesheet" href="css/calendar.doterra-colors.css">
     <link rel="stylesheet" href="css/calendar.doterra-gold.css">
@@ -315,10 +316,10 @@
     <link rel="stylesheet" href="css/calendar.morning-forest.css">
     <link rel="stylesheet" href="css/calendar.mountain-lake.css">
     <link rel="stylesheet" href="css/calendar.mountain-landscape.css">
-    <link rel="stylesheet" href="css/calendar.mountain-sunset.css">
     <link rel="stylesheet" href="css/calendar.mountain-mood.css">
     <link rel="stylesheet" href="css/calendar.mountain-of-dreams.css">
     <link rel="stylesheet" href="css/calendar.mountain-peak.css">
+    <link rel="stylesheet" href="css/calendar.mountain-sunset.css">
     <link rel="stylesheet" href="css/calendar.mountain-view.css">
     <link rel="stylesheet" href="css/calendar.mount-fuji.css">
     <link rel="stylesheet" href="css/calendar.mount-cook.css">
@@ -893,6 +894,7 @@
                 <option value="distant-skies">Distant Skies</option>
                 <option value="divi-divi-trees">Divi-divi Trees</option>
                 <option value="domino-dancing">Domino Dancing</option>
+                <option value="domino-effect">Domino Effect</option>
                 <option value="doterra-black">DōTERRA Black</option>
                 <option value="doterra-colors">DōTERRA Colors</option>
                 <option value="doterra-gold">DōTERRA Gold</option>
@@ -1046,10 +1048,10 @@
                 <option value="morning-forest">Morning Forest</option>
                 <option value="mountain-lake">Mountain Lake</option>
                 <option value="mountain-landscape">Mountain Landscape</option>
-                <option value="mountain-sunset">Mountain Sunset</option>
                 <option value="mountain-mood">Mountain Mood</option>
                 <option value="mountain-of-dreams">Mountain of Dreams</option>
                 <option value="mountain-peak">Mountain Peak</option>
+                <option value="mountain-sunset">Mountain Sunset</option>
                 <option value="mountain-view">Mountain View</option>
                 <option value="mount-fuji">Mount Fuji</option>
                 <option value="mount-cook">Mount Cook</option>
