--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
     <link rel="stylesheet" href="css/calendar.midnight-train.css">
     <link rel="stylesheet" href="css/calendar.midnight-elegance.css">
     <link rel="stylesheet" href="css/calendar.migratory-birds.css">
+    <link rel="stylesheet" href="css/calendar.mirror-lake.css">
     <link rel="stylesheet" href="css/calendar.modern-technology.css">
     <link rel="stylesheet" href="css/calendar.monochrome-ink.css">
     <link rel="stylesheet" href="css/calendar.moonlit-path.css">
@@ -1042,6 +1043,7 @@
                 <option value="midnight-train">Midnight Train</option>
                 <option value="midnight-elegance">Midnight Elegance</option>
                 <option value="migratory-birds">Migratory Birds</option>
+                <option value="mirror-lake">Mirror Lake</option>
                 <option value="modern-technology">Modern Technology</option>
                 <option value="monochrome-ink">Monochrome Ink</option>
                 <option value="moonlit-path">Moonlit Path</option>
