--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@
     <link rel="stylesheet" href="css/calendar.mount-cook.css">
     <link rel="stylesheet" href="css/calendar.my-dream-country.css">
     <link rel="stylesheet" href="css/calendar.my-tomorrow.css">
+    <link rel="stylesheet" href="css/calendar.natural-wonders.css">
     <link rel="stylesheet" href="css/calendar.neon-nights.css">
     <link rel="stylesheet" href="css/calendar.new-ai.css">
     <link rel="stylesheet" href="css/calendar.new-black.css">
@@ -1059,6 +1060,7 @@
                 <option value="mount-cook">Mount Cook</option>
                 <option value="my-dream-country">My Dream Country</option>
                 <option value="my-tomorrow">My Tomorrow</option>
+                <option value="natural-wonders">Natural Wonders</option>
                 <option value="neon-nights">Neon Nights</option>
                 <option value="new-ai">New AI</option>
                 <option value="new-millenium">New Millenium</option>
